💹 Adjust the size of the rounded corners (20px to 10px inside) and fix the problem of uneven height

--- a/css/fs/page.css
+++ b/css/fs/page.css
@@ -7,10 +7,9 @@
     font-family: "SF Pro Text","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
 }
 .frame {
-    margin: 0px;
+    margin: 0px 25px 25px 0px;
     display: flex;
     justify-content: left;
-    background-color: #c6e7fa;
 }
 
 .menu {
@@ -20,7 +19,7 @@
 }
 .button {
     width: 65px;
-    height: 10px;
+    height: 12px;
     display: flex;
     justify-content: space-around;
     margin-left: 25px;
@@ -56,7 +55,7 @@
     margin-left: 25px;
     margin-top: 25px;
     display: flex;
-    border-radius: 20px;
+    border-radius: 10px;
     text-decoration: none;
 }
 .icon:hover {
@@ -93,12 +92,13 @@
     width: 250px;
     height: 2px;
     background: rgba(0, 0, 0, 0.1);
-    margin: 20px 25px;
+    margin: 25px 25px;
 }
 .title {
     width: 60px;
+    height: 20px;
     margin-left: 25px;
-    margin-bottom: 20px;
+    margin-bottom: 25px;
 }
 .title p {
     font-size: 14px;
@@ -111,7 +111,7 @@
     display: flex;
     position: relative;
     transition: 0.5s;
-    border-radius: 20px;
+    border-radius: 10px;
     text-decoration: none;
 }
 .item:hover {
@@ -134,13 +134,13 @@
     align-items: center;
     overflow: hidden;
     position: relative;
-    left: -20px;
+    white-space: nowrap;
 }
 .webside {
     width: 250px;
     background-color: #ECF6FD;
     margin-left: 25px;
-    border-radius: 20px;
+    border-radius: 10px;
 }
 .light {
     width: 10px;
@@ -149,7 +149,7 @@
     position: absolute;
     left: -25px;
     opacity: 0;
-    border-radius: 0px 20px 20px 0px;
+    border-radius: 0px 10px 10px 0px;
 }
 .item:hover .light {
     opacity: 1;
@@ -162,8 +162,8 @@
 .main {
     left: 275px;
     top: 0px;
-    width:690px;
-    height: 690px;
+    width:731px;
+    height: 731px;
     position: absolute;
     background-color: #ECF6FD;
     background: #c6e7fa;
@@ -171,7 +171,7 @@
 }
 .main h3 {
     font-weight: 400;
-    height: 60px;
+    height: 62px;
     width: 185px;
     display: flex;
     justify-content: left;
@@ -183,17 +183,17 @@
 }
 .content {
     margin-left: 0px;
-    margin-top: 60px;
-    width: 640px;
-    height: 605px;
-    border-radius: 20px;
+    margin-top: 62px;
+    width: 681px;
+    height: 644px;
+    border-radius: 10px;
     background-color: #ECF6FD;
     padding: 25px;
 }
 iframe {
-    margin-left: 0px;
+    margin-left: -275px;
     margin-top: 60px;
     width: 640px;
     height: 605px;
-    border-radius: 20px;
+    border-radius: 10px;
 }
